Styling & base routes between views

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,5 +1,12 @@
 @import './reset'
-  
-.home
-  color: red
-  font-size: 24px
+@import './material'
+
+.main-background
+  position: fixed
+  z-index: 0
+  width: 100%
+  height: 100vh
+  background: linear-gradient(to bottom, rgb(25, 118, 210), rgb(92, 187, 246))
+
+.toolbar
+  z-index: 10
