--- a/src/styles/material.sass
+++ b/src/styles/material.sass
@@ -1,6 +1,10 @@
 .absolute
   position: absolute
 
+.border
+  &-none
+    border: none
+
 .cursor
   &-p
     cursor: pointer
@@ -138,6 +142,9 @@ $sizes: [5,10,15,20,25,30,33,35,40,45,50,55,60,65,66,70,75,80,85,90,95,100]
       height: 100% !important
     &max
       height: 100vh
+
+.relative
+  position: relative
 
 .ta
   &-c
